--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'maven'
 
 apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.qdedu'
 
 android {
     compileSdkVersion 28
