--- a/lib-ucrop/build.gradle
+++ b/lib-ucrop/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
+
 android {
     compileSdkVersion 27
     buildToolsVersion "28.0.3"
